kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - staging
                - production
      validate:
        message: "Privilegierte Container sind nicht erlaubt."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
