kyverno/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-cpu-memory
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - staging
                - production
      validate:
        message: "CPU- und Memory-Requests sowie Limits müssen gesetzt sein."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
